@@ -858,5 +858,11 @@ in string begins with a comment.
 Tweaked lm.citations() to remove outer commas and remove blanks
 more cleanly.
 
+
+*****  Mon Jan 14 22:45:16 CET 2019  *****
+
+Added test_latex_manager.py testing file.
+(Still need tests for functions that need fixtures).
+
 *****
 
